# claudecode-redmine-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/rules/: python-conventions.md
.claude/skills/implement-redmine-tool/: SKILL.md
.claude/skills/pre-push-review/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: 01_bug.yml  02_tool.yml  03_adr.yml  04_feature.yml  05_question.yml  config.yml
.github/workflows/: auto-add-to-project.yml  auto-label.yml  ci.yml  labels-sync.yml  release-please.yml  stale.yml
doc/: branch-protection.md  review-checklist.md  setup-guide.md  tools.md
doc/adr/: 0001-programming-language.md  0003-packaging-tool.md  0004-http-client.md  0005-config-management.md  0006-authentication-method.md  0007-tool-granularity.md  0008-error-handling-strategy.md  README.md  Template.md
docs/: roadmap.md
docs/adr/: 0002-mcp-sdk-selection.md
src/redmine_mcp/: __init__.py  client.py  config.py  errors.py  server.py
src/redmine_mcp/tools/: __init__.py  enumerations.py  issues.py  project_resources.py  projects.py  time_entries.py  users.py
tests/: __init__.py
tests/integration/: __init__.py  test_enumerations.py  test_issue_mutations.py  test_issues.py  test_project_resources.py  test_projects.py  test_server.py  test_time_entries.py  test_users.py
tests/unit/: __init__.py  test_config.py  test_errors.py
