[project]
name = "redmine-mcp-server"
version = "0.1.0"
description = "Personal Redmine MCP server for Claude Code integration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.27.2",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
]

[project.scripts]
redmine-mcp = "redmine_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/redmine_mcp"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.32",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["redmine_mcp"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 80
exclude_also = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
files = ["src", "tests"]
